# tftreplay

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  repomix-output.xml
.github/workflows/: ci.yml
apple_capture/: Package.swift
apple_capture/Sources/AppleCapture/: CaptureSession.swift  Encoder.swift  FFIExports.swift  FrameRingBuffer.swift
apple_capture/Sources/AppleCaptureC/: bridge.c  bridge.h
apple_capture/Sources/AppleCaptureTests/: CaptureSessionTests.swift
docs/: CONTRIBUTING.md  architecture.md
extension-host/: package.json
extension-host/sdk/: index.d.ts
extension-host/src/: index.ts  ipc.ts  loader.ts  types.ts
mac_app/: Info.plist  entitlements.plist
recorder_cli/: Cargo.toml  build.rs
recorder_cli/src/: gui.rs  lib.rs  main.rs
recorder_cli/tests/: bundle_build.rs  bundle_dylib.rs  gui_test.rs  rpath_check.rs
recorder_core/: Cargo.toml  build.rs
recorder_core/benches/: capture_bench.rs
recorder_core/src/: ffi.rs  lib.rs
recorder_core/src/tests/: ffi_integration.rs  ffi_smoke.rs
recorder_core/tests/: mp4_header.rs
resources/: tft.icns  tft.icns.placeholder
scripts/: package_app.sh
