[workspace]
members = ["recorder_core", "recorder_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TFT Recorder Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/tft-recorder"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
tonic = "0.12"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cxx = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"