[package]
name = "recorder_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "recorder"
path = "src/main.rs"

[dependencies]
recorder_core = { path = "../recorder_core" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ctrlc = "3.4"
eframe = "0.27"
egui = "0.27"
chrono = "0.4"
shellexpand = "3.1"
dirs = "5.0"

# Bundle metadata for cargo-bundle to generate macOS .app
[package.metadata.bundle]
name = "TFT Recorder"
identifier = "com.tftreplay.recorder"
icon = ["../resources/tft.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) 2024 TFT Recorder Contributors"
category = "public.app-category.video"
short_description = "Screen recorder for Team Fight Tactics"
long_description = "Ultra-light screen recorder optimized for Team Fight Tactics gameplay capture on macOS."

[package.metadata.bundle.macos]
minimum_system_version = "12.0"
info_plist_path = "../mac_app/Info.plist"
entitlements_path = "../mac_app/entitlements.plist"
frameworks = [
    "AVFoundation.framework",
    "CoreMedia.framework", 
    "CoreVideo.framework",
    "VideoToolbox.framework",
    "CoreGraphics.framework"
]