[package]
name = "recorder_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
cxx = { workspace = true }

[build-dependencies]
cxx-build = "1.0"
cc = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "capture_bench"
harness = false